Opened 16 years ago
Closed 14 years ago
#3042 closed bug (fixed)
[ShowImage] wheel scrolling flickers image path string
Reported by: | diver | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ShowImage | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If you scroll mouse wheel above an image in fullscreen mode then image path at the bottom will flicker.
Change History (5)
comment:1 by , 16 years ago
Status: | new → assigned |
---|
comment:2 by , 15 years ago
Can't reproduce it in VirtualBox, could someone test it on real hardware?
comment:3 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
Version: | R1/pre-alpha1 → R1/Development |
It's still there - it's an app_server problem, actually, and ShowImage can't do much about it AFAIK. When scrolling, the app_server automatically updates the screen (dunno if that can be turned off) such that the client is always late drawing over the new contents. Maybe stippi has more insights on the issue (or even a solution?).
comment:4 by , 14 years ago
The most simple solution is to invalidate the whole view before scrolling. Since recently the app_server does not scroll dirty regions anymore, to make it possible to work around exactly this problem. You could check if the caption is displayed and invalidate before scrolling only then. Because of the double buffering, the overhead is not actually more by triggering a draw, since the app_server scrolls in the offscreen buffer and blits to the front buffer, which is not much different from drawing the bitmap in the offscreen buffer and blitting the same region to the front buffer.
comment:5 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Stupid me, Stippi already explained that to me during BeGeistert... anyway, thanks again, and it's fixed in hrev39527.
The path caption flickers in several cases and it has always annoyed me. I will look into using some double buffering or making use of the new app_server buffered drawing to stop the flickering.