* Fixed #3042 as suggested by Stippi (looks like I'm quickly following Ingo's   great example at getting senile - at least he told me about this solution   before; the same trick is already used in SetZoom()).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39527 a95241bf-73f2-0310-859d-f6bbb57e9c96